static build GraphBLAS, introduce thunk

--- a/deps/GraphBLAS/CMakeLists.txt
+++ b/deps/GraphBLAS/CMakeLists.txt
@@ -88,7 +88,7 @@ endif ( )
 
 # select "true" to build both dynamic and static libraries:
   set ( BUILD_GRB_STATIC_LIBRARY true )
-  set ( BUILD_GRB_STATIC_LIBRARY false )
+  # set ( BUILD_GRB_STATIC_LIBRARY false )
 
 if ( BUILD_GRB_STATIC_LIBRARY )
     message ( STATUS "Building both static and dynamic GraphBLAS libraries" )
