--- a/ramp.yml
+++ b/ramp.yml
@@ -5,10 +5,11 @@ description: A graph database on top of Redis which supports Open-Cypher query l
 homepage: http://redisgraph.io
 license: Redis Source Available License Agreement
 command_line_args: ""
-min_redis_version: "4.0"
-min_redis_pack_version: "5.0"
+min_redis_version: "5.0.5"
+min_redis_pack_version: "5.4.2"
 capabilities:
     - types
     - hash_policy
     - failover_migrate
     - persistence_rdb
+    - persistence_aof
