--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -157,6 +157,28 @@ jobs:
             -H "Content-Type: application/json"
             -d '{"service_id":"single_module_test_cycle_sanity_and_extended", "name":"redisgraph automation-testing", "properties":{"sut_version":"master", "email_recipients":"graph@redislabs.com", "sut_environments":[], "tools_environment":{}, "module_name": "RedisGraph", "module_version":"master", "cycle_environments_setup":[{"teardown":true, "name":"xenial-amd64-aws", "concurrency":1}, {"teardown":true, "name":"bionic-amd64-aws", "concurrency":1}]}}'
             https://qa-automation-center.redislabs.com/processes
+  benchmark-with-docker:
+    machine:
+      enabled: true
+      image: ubuntu-1604:201903-01
+    steps:
+      - checkout
+      - run:
+          name: Setup Docker container with graph500 data
+          command: |
+            mkdir -p /workspace/data
+            INSTALLPATH=/workspace/data ./tests/benchmark_docker/graph500/retrieve_graph500_rdb_from_s3.sh
+            docker run -d -p 6379:6379 -v /workspace/data/graph500.rdb:/data/dump.rdb -it --rm redislabs/redisgraph
+            sleep 180
+            docker version
+      - persist_to_workspace:
+          root: /workspace
+          paths:
+            - data
+      - run:
+          name: Benchmark graph500
+          command: |
+            make bench_graph500
 workflows:
   version: 2
   build_and_package:
@@ -185,6 +207,10 @@ workflows:
       - run_automation:
           requires:
             - deploy_branch
+      - benchmark-with-docker:
+          filters:
+            tags:
+              only: /.*/
       - deploy_release:
           filters:
             tags:
