--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "deps/libcypher-parser"]
 	path = deps/libcypher-parser
-	url = https://github.com/cleishm/libcypher-parser.git
+	url = https://github.com/RedisGraph/libcypher-parser.git
+    branch = params_type
 [submodule "deps/rax"]
 	path = deps/rax
 	url = https://github.com/antirez/rax.git
