--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       - run:
           name: Install prerequisite
           command: >-
-            pip install git+https://github.com/RedisGraph/redisgraph-py.git@parameters_support &&
+            pip install git+https://github.com/RedisGraph/redisgraph-py.git@master &&
             pip install psutil behave &&
             pip install redis-py-cluster &&
             pip install git+https://github.com/RedisLabsModules/RLTest.git@master &&
