Remove debug code, clarify some logic

--- a/src/Makefile
+++ b/src/Makefile
@@ -15,7 +15,6 @@ DEBUGFLAGS = -g -ggdb -O3
 ifeq ($(DEBUG), 1)
 	DEBUGFLAGS = -g -ggdb -O0
 endif
-DEBUGFLAGS = -g -ggdb -O0
 
 # Default CFLAGS
 CFLAGS = \
@@ -127,7 +126,7 @@ $(LIBXXHASH):
 # Build GraphBLAS only if library does not already exists.
 $(GRAPHBLAS):
 ifeq (,$(wildcard $(GRAPHBLAS)))
-	@$(MAKE) -C ../deps/GraphBLAS CMAKE_OPTIONS="-DCMAKE_C_COMPILER='$(CC)' -DCMAKE_CXX_COMPILER='$(CXX)'" static # TODO figure out how to not compile dynamic
+	@$(MAKE) -C ../deps/GraphBLAS CMAKE_OPTIONS="-DCMAKE_C_COMPILER='$(CC)' -DCMAKE_CXX_COMPILER='$(CXX)'" static
 endif
 .PHONY: $(GRAPHBLAS)
 
