introduced semi-apply

--- a/src/Makefile
+++ b/src/Makefile
@@ -54,6 +54,7 @@ CC_SOURCES += $(wildcard $(SOURCEDIR)/datatypes/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/datatypes/path/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/execution_plan/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/execution_plan/ops/*.c)
+CC_SOURCES += $(wildcard $(SOURCEDIR)/execution_plan/ops/apply_ops/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/execution_plan/ops/shared/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/execution_plan/optimizations/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/filter_tree/*.c)
