--- a/src/Makefile
+++ b/src/Makefile
@@ -40,6 +40,7 @@ CC_SOURCES += $(wildcard $(SOURCEDIR)/algorithms/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/arithmetic/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/arithmetic/path_funcs/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/arithmetic/list_funcs/*.c)
+CC_SOURCES += $(wildcard $(SOURCEDIR)/arithmetic/placeholder_funcs/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/arithmetic/time_funcs/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/arithmetic/entity_funcs/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/arithmetic/string_funcs/*.c)
