--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,18 @@
-version: 2
+version: 2.1
+commands:
+  early_return_for_forked_pull_requests:
+    description: >-
+      If this build is from a fork, stop executing the current job and return success.
+      This is useful to avoid steps that will fail due to missing credentials.
+    steps:
+      - run:
+          name: Early return if this build is from a forked PR
+          command: |
+            if [ -n "$CIRCLE_PR_NUMBER" ]; then
+              echo "Nothing to do for forked PRs, so marking this step successful"
+              circleci step halt
+            fi
+
 jobs:
   build:
     docker:
@@ -54,6 +68,8 @@ jobs:
           name: Test
           command: make test
       
+      - early_return_for_forked_pull_requests
+
       - run:
           name: Persist Artifacts
           command: |
