Add Circle memcheck job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,11 @@ commands:
 jobs:
   build:
     docker:
+      # Primary image
       - image: 'redislabsmodules/rmbuilder:latest'
+      # Secondary image
+      - image: 'jlovitz/redis-libmalloc'
+        command: [redis-server, --loadmodule src/redisgraph.so, --port 6380]
     steps:
       - checkout
       - run:
@@ -67,7 +71,13 @@ jobs:
       - run:
           name: Test
           command: make test
-      
+
+      - run:
+          name: Test for memory leaks
+          command: |
+              docker start $(docker ps -qf ancestor=redis-libmalloc) # Start container
+              TEST_ARGS="--env-reuse --existing-env-addr localhost:6380" make memcheck
+
       - early_return_for_forked_pull_requests
 
       - run:
