Run memory test without optimizations after packaging artifacts

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,14 +67,6 @@ jobs:
       - run:
           name: Test
           command: make test
-
-      - run:
-          name: Test for memory leaks
-          command: |
-              # Replace the default Redis server with one linked to libc malloc rather than jemalloc.
-              git clone https://github.com/antirez/redis.git; cd redis; git checkout 5.0.7; make valgrind; make install; cd ..
-              make memcheck # Re-run the test suite, failing if definite memory leaks have been introduced.
-
       - early_return_for_forked_pull_requests
 
       - run:
@@ -90,6 +82,15 @@ jobs:
             - '*.so'
             - ramp.yml
             - build  
+
+      - run:
+          name: Test for memory leaks
+          command: |
+              # Replace the default Redis server with one linked to libc malloc rather than jemalloc.
+              git clone https://github.com/antirez/redis.git; cd redis; git checkout 5.0.7; make valgrind; make install; cd ..
+              make clean; DEBUG=1 make # Rebuild module at O0
+              make memcheck # Re-run the test suite, failing if definite memory leaks have been introduced.
+
   package_branch:
     docker:
       - image: 'redislabsmodules/rmbuilder:latest'
