--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
       #- run:
           # name: Formatting
           # command: astyle --options=.astylerc -R "./*.c,*.h" --dry-run -Q
-      
+
       # Load GraphBLAS from cache if possible.
       - restore_cache:
           keys:
@@ -57,7 +57,7 @@ jobs:
           paths:
             - deps/GraphBLAS
           key: GraphBLAS3.2-{{checksum "./deps/GraphBLAS/README.md"}}
-          
+
       # Save libcypher-parser to cache.
       - save_cache:
           paths:
@@ -75,13 +75,13 @@ jobs:
             strip src/$MODULE_ARTIFACT
             mkdir -p /workspace/build && cp src/$MODULE_ARTIFACT /workspace
             cp ramp.yml /workspace/
-      
+
       - persist_to_workspace:
           root: /workspace
           paths:
             - '*.so'
             - ramp.yml
-            - build  
+            - build
 
       - run:
           name: Test for memory leaks
@@ -157,17 +157,25 @@ jobs:
             public-read --recursive --exclude "*" --include "*.zip"
   deploy_docs:
     docker:
-      - image: 'redislabsmodules/rmbuilder:latest'
+      - image: 'python:buster'
     steps:
+      - run:
+          name: Setup executor
+          command: |
+            apt-get -qq update
+            apt-get -q install -y git openssh-client curl ca-certificates gzip
+            cd ..; curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"; unzip awscliv2.zip;./aws/install
       - checkout
       - run:
-          name: Build Docs
+          name: Install dependencies
+          command: pip install -r docs/requirements.txt
+      - run:
+          name: Build docs
           command: mkdocs build
       - run:
           name: Deploy Docs to S3
-          command: >-
-            aws s3 cp site s3://oss.redislabs.com/$WEBSITE_FOLDER/ --acl
-            public-read --recursive
+          command: |
+            aws s3 cp site s3://oss.redislabs.com/$WEBSITE_FOLDER/ --acl public-read --recursive
   run_automation:
     docker:
       - image: 'redislabsmodules/rmbuilder:latest'
@@ -188,13 +196,13 @@ workflows:
       - build:
           filters:
             tags:
-              only: /.*/      
+              only: /.*/
       - package_branch:
           requires:
             - build
           filters:
             branches:
-              only: master      
+              only: master
       - package_release:
           requires:
             - build
@@ -215,7 +223,10 @@ workflows:
               only: '/^v[0-9].*/'
           requires:
             - package_release
+      # TODO: deploy_docs should run only when 'docs/' or 'mkdocs.yml' change
       - deploy_docs:
-          filters:
-            branches:
-              only: master
+        filters:
+          branches:
+            only:
+              - master
+              - /^[0-9]+\.[0-9]+$/
