--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,7 +23,7 @@ theme:
   feature:
     tabs: false
 
-pages:
+nav:
     - 'Quickstart': index.md
     - 'Commands': commands.md
     - 'Design': design.md
@@ -37,3 +37,7 @@ markdown_extensions:
       guess_lang: False
   - toc:
       permalink: True
+
+plugins:
+  - search
+  - versions-menu
