--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -230,3 +230,5 @@ workflows:
             only:
               - master
               - /^[0-9]+\.[0-9]+$/
+        requires:
+          - package_release
