--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -133,18 +133,7 @@ jobs:
             - build
       - store_artifacts:
           path: /workspace/build
-  deploy_branch:
-    docker:
-      - image: 'redislabsmodules/rmbuilder:latest'
-    steps:
-      - attach_workspace:
-          at: /workspace
-      - run:
-          name: Deploy to S3
-          command: >-
-            aws s3 cp /workspace/build/ s3://redismodules/$PACKAGE_NAME/ --acl
-            public-read --recursive --exclude "*" --include "*.zip"
-  deploy_release:
+  deploy_to_s3:
     docker:
       - image: 'redislabsmodules/rmbuilder:latest'
     steps:
@@ -191,42 +180,44 @@ jobs:
             https://qa-automation-center.redislabs.com/processes
 workflows:
   version: 2
-  build_and_package:
+  build_branch:
     jobs:
       - build:
           filters:
             tags:
-              only: /.*/
+              # Ignore tagging.
+              ignore: /.*/
       - package_branch:
           requires:
             - build
           filters:
             branches:
               only: master
-      - package_release:
+      - deploy_to_s3:
           requires:
-            - build
+            - package_branch
+      - run_automation:
+          requires:
+            - deploy_to_s3
+      - deploy_docs:
+          requires:
+            - deploy_to_s3     
+
+# The build_release workflow runs only against tags.
+  build_release:
+    jobs:
+      - build:
           filters:
             branches:
               ignore: /.*/
             tags:
               only: '/^v[0-9].*/'
-      - deploy_branch:
+      - package_release:
           requires:
-            - package_branch
-      - run_automation:
-          requires:
-            - deploy_branch
-      - deploy_release:
-          filters:
-            tags:
-              only: '/^v[0-9].*/'
+            - build
+      - deploy_to_s3:
           requires:
             - package_release
-      # TODO: deploy_docs should run only when 'docs/' or 'mkdocs.yml' change
       - deploy_docs:
-        filters:
-          branches:
-            only:
-              - master
-              - /^[0-9]+\.[0-9]+$/
+          requires:
+            - deploy_to_s3  
