--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ commands:
 jobs:
   build:
     docker:
-      - image: 'redislabsmodules/rmbuilder:latest'
+      - image: 'redisfab/rmbuilder:6.0-rc3-x64-bionic'
     steps:
       - checkout
       - run:
@@ -93,7 +93,7 @@ jobs:
 
   package_branch:
     docker:
-      - image: 'redislabsmodules/rmbuilder:latest'
+      - image: 'redisfab/rmbuilder:6.0-rc3-x64-bionic'
     steps:
       - attach_workspace:
           at: /workspace
@@ -111,7 +111,7 @@ jobs:
           path: /workspace/build
   package_release:
     docker:
-      - image: 'redislabsmodules/rmbuilder:latest'
+      - image: 'redisfab/rmbuilder:6.0-rc3-x64-bionic'
     steps:
       - attach_workspace:
           at: /workspace
@@ -135,7 +135,7 @@ jobs:
           path: /workspace/build
   deploy_to_s3:
     docker:
-      - image: 'redislabsmodules/rmbuilder:latest'
+      - image: 'redisfab/rmbuilder:6.0-rc3-x64-bionic'
     steps:
       - attach_workspace:
           at: /workspace
@@ -167,7 +167,7 @@ jobs:
             aws s3 cp site s3://oss.redislabs.com/$WEBSITE_FOLDER/ --acl public-read --recursive
   run_automation:
     docker:
-      - image: 'redislabsmodules/rmbuilder:latest'
+      - image: 'redisfab/rmbuilder:6.0-rc3-x64-bionic'
     steps:
       - run:
           name: Run QA Automation
