--- a/src/Makefile
+++ b/src/Makefile
@@ -61,19 +61,19 @@ CC_SOURCES += $(wildcard $(SOURCEDIR)/execution_plan/optimizations/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/filter_tree/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/entities/*.c)
-CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/serializers/*.c)
-CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/serializers/encoder/*.c)
-CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/serializers/encoder/with_server_events/*.c)
-CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/serializers/encoder/with_server_events/*/*.c)
-CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/serializers/encoder/without_server_events/*.c)
-CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/serializers/encoder/without_server_events/*/*.c)
-CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/serializers/decoders/*.c)
-CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/serializers/decoders/prev/*.c)
-CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/serializers/decoders/prev/*/*.c)
-CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/serializers/decoders/with_server_events/*.c)
-CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/serializers/decoders/with_server_events/*/*.c)
-CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/serializers/decoders/without_server_events/*.c)
-CC_SOURCES += $(wildcard $(SOURCEDIR)/graph/serializers/decoders/without_server_events/*/*.c)
+CC_SOURCES += $(wildcard $(SOURCEDIR)/serializers/*.c)
+CC_SOURCES += $(wildcard $(SOURCEDIR)/serializers/encoder/*.c)
+CC_SOURCES += $(wildcard $(SOURCEDIR)/serializers/encoder/with_server_events/*.c)
+CC_SOURCES += $(wildcard $(SOURCEDIR)/serializers/encoder/with_server_events/*/*.c)
+CC_SOURCES += $(wildcard $(SOURCEDIR)/serializers/encoder/without_server_events/*.c)
+CC_SOURCES += $(wildcard $(SOURCEDIR)/serializers/encoder/without_server_events/*/*.c)
+CC_SOURCES += $(wildcard $(SOURCEDIR)/serializers/decoders/*.c)
+CC_SOURCES += $(wildcard $(SOURCEDIR)/serializers/decoders/prev/*.c)
+CC_SOURCES += $(wildcard $(SOURCEDIR)/serializers/decoders/prev/*/*.c)
+CC_SOURCES += $(wildcard $(SOURCEDIR)/serializers/decoders/with_server_events/*.c)
+CC_SOURCES += $(wildcard $(SOURCEDIR)/serializers/decoders/with_server_events/*/*.c)
+CC_SOURCES += $(wildcard $(SOURCEDIR)/serializers/decoders/without_server_events/*.c)
+CC_SOURCES += $(wildcard $(SOURCEDIR)/serializers/decoders/without_server_events/*/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/GraphBLASExt/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/grouping/*.c)
 CC_SOURCES += $(wildcard $(SOURCEDIR)/index/*.c)
