--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -225,9 +225,4 @@ workflows:
           requires:
             - package_release
       # TODO: deploy_docs should run only when 'docs/' or 'mkdocs.yml' change
-      - deploy_docs:
-        filters:
-          branches:
-            only:
-              - master
-              - /^[0-9]+\.[0-9]+/
+      - deploy_docs
