--- a/ramp.yml
+++ b/ramp.yml
@@ -13,3 +13,5 @@ capabilities:
     - persistence_rdb
     - persistence_aof
     - replica_of # Replication requires total memory to be at least 2x the graph's size, only on Redis 5.
+    - clustering
+    - backup_restore
