fixed misplaced env var setting

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -38,6 +38,8 @@ tck:
 	@$(MAKE) -C tck TEST_ARGS="$(TEST_ARGS)"
 
 memcheck:
+	# Allow RediSearch global destructors.
+	EXPORT RS_GLOBAL_DTORS=1
 	@$(MAKE) -C flow TEST_ARGS="$(MEMCHECK_ARGS)"
 	@$(MAKE) -C tck TEST_ARGS="$(MEMCHECK_ARGS)"
 	./memcheck.sh
