changed RediSearch version to 1.8 (#1103)
* changed RediSearch version to 1.8

* added flag for redisearch GC

* moved env var setting to memcheck script

* Update memcheck.sh

* fixed misplaced env var setting

* fixed bad command format

* flag in circle ci instead of makefile

Co-authored-by: Roi Lipman <swilly22@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,6 +90,9 @@ jobs:
               git clone https://github.com/antirez/redis.git; cd redis; git checkout 5.0.7; make valgrind; make install; cd ..
               make clean; DEBUG=1 make # Rebuild module at O0
               make memcheck # Re-run the test suite, failing if definite memory leaks have been introduced.
+          # Allow RediSearch global destructors.
+          environment:
+            RS_GLOBAL_DTORS: 1
 
   package_branch:
     docker:
