Added debug flags to RediSearch and GraphBlas when DEBUG=1 env variable is set (v2.0) (#1273)
* [add] added  added -DCMAKE_BUILD_TYPE=Debug to RediSearch and GraphBlas

* [fix] make DEBUG=1 working as expected for RediSearch and GraphBlas

--- a/src/Makefile
+++ b/src/Makefile
@@ -12,8 +12,12 @@ LIBCYPHER-PARSER_DIR = ../deps/libcypher-parser/lib/src
 
 # if DEBUG env var is set, we compile with "debug" cflags
 DEBUGFLAGS = -g -ggdb -O3 
-ifeq ($(DEBUG), 1)
+GRAPHBLAS_CMAKE_OPTIONS ="-DCMAKE_C_COMPILER='$(CC)'"
+REDISEARCH_CMAKE_OPTIONS = -DRS_FORCE_NO_GITVERSION=ON -DRS_BUILD_STATIC=ON
+ifeq ($(DEBUG),1)
 	DEBUGFLAGS = -fno-omit-frame-pointer -g -ggdb -O0
+	GRAPHBLAS_CMAKE_OPTIONS += " -DCMAKE_BUILD_TYPE=Debug"
+	REDISEARCH_CMAKE_OPTIONS +=  -DCMAKE_BUILD_TYPE=Debug
 endif
 
 # Default CFLAGS
@@ -134,7 +138,7 @@ $(LIBXXHASH):
 # Build GraphBLAS only if library does not already exists.
 $(GRAPHBLAS):
 ifeq (,$(wildcard $(GRAPHBLAS)))
-	@$(MAKE) -C ../deps/GraphBLAS CMAKE_OPTIONS="-DCMAKE_C_COMPILER='$(CC)'" static_only
+	@$(MAKE) -C ../deps/GraphBLAS CMAKE_OPTIONS=$(GRAPHBLAS_CMAKE_OPTIONS) static_only
 endif
 .PHONY: $(GRAPHBLAS)
 
@@ -143,7 +147,7 @@ ifeq (,$(wildcard $(REDISEARCH)))
 	cd ../deps/RediSearch; \
 	mkdir build; \
 	cd build; \
-	cmake -DRS_FORCE_NO_GITVERSION=ON -DRS_BUILD_STATIC=ON ..; \
+	cmake $(REDISEARCH_CMAKE_OPTIONS) ..; \
 	make;
 endif
 .PHONY: $(REDISEARCH)
