Update ramp.yml (#706)
Co-authored-by: Roi Lipman <swilly22@users.noreply.github.com>
Co-authored-by: Guy Korland <gkorland@gmail.com>

--- a/ramp.yml
+++ b/ramp.yml
@@ -12,6 +12,7 @@ capabilities:
     - failover_migrate
     - persistence_rdb
     - persistence_aof
+    - clustering
     - replica_of
     - clustering
     - backup_restore
