Updates to Astyle config file

--- a/.astylerc
+++ b/.astylerc
@@ -4,9 +4,11 @@
 --mode=c
 --style=google
 --indent=force-tab=4
+--convert-tabs
 --pad-oper
 --unpad-paren
 --align-pointer=name
+--align-reference=none
 --max-code-length=100
 --max-continuation-indent=80
 --min-conditional-indent=0
